repair style variables

--- a/src/containers/App/_vars.scss
+++ b/src/containers/App/_vars.scss
@@ -10,7 +10,7 @@ $fw-bold: 800;
 
 /* Other */
 $radii: 0.5rem;
-
+$col-tomat: tomato;
 // body[data-theme="dark"] 
 $colors-text: hsl(0, 0%, 100%);
 $colors-bg: (207, 26%, 17%);
