--- a/src/containers/Header/Header.module.scss
+++ b/src/containers/Header/Header.module.scss
@@ -1,8 +1,8 @@
-@import url('../../index.scss');
+@import'../App/vars';
 
 header {
     box-shadow: black;
     width: 90%;
     height: 10%;
-    background-color: $colors-bg;
+    background-color: $col-tomat;
 }
