--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,9 @@
-@import-normalize;
+@import"./containers/App/reset";
+@import"./containers/App/normalize";
 @import"./containers/App/vars";
 
 * {
     box-sizing: border-box;
-}
-
-
-body {
     margin: 0px;
-    font-family: $family;
-    color: $colors-text;
-    font-weight: $fw-light;
-    background-color: $colors-bg;
+    padding: 0px;
 }
