--- a/src/containers/Header/Header.module.scss
+++ b/src/containers/Header/Header.module.scss
@@ -1,7 +1,15 @@
 @import'../App/vars';
 
 header {
-    box-shadow: $shadow-dark;
-    width: 90%;
-    height: 10%;
+    // box-shadow: $shadow-dark;
+    width: 100%;
+    height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
 }
