--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,10 @@
     margin: 0px;
     padding: 0px;
 }
+
+body {
+    font-family: $family;
+    color: $colors-text;
+    font-weight: $fw-light;
+    background-color: $colors-bg;
+}
