--- a/src/containers/Header/Header.module.scss
+++ b/src/containers/Header/Header.module.scss
@@ -13,6 +13,7 @@ header {
         justify-content: space-between;
         width: $md-display-size;
         padding: 2rem;
+        padding: 2rem;
 
         .modeTheme {
             display: flex;
