--- a/src/containers/Main/Controls/Controls.module.scss
+++ b/src/containers/Main/Controls/Controls.module.scss
@@ -1,6 +1,30 @@
 .container {
     display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    width: 100%;
     justify-content: space-between;
-    margin: 15px 0px;
-    width: 900px;
+
+    // .search {
+    //     margin: 15px;
+    // }
+
+    // .select {
+    //     margin: 15px;
+    // }
+}
+
+@media (min-width:754px) {
+    .container {
+        display: flex;
+        flex-direction: row;
+
+        .search {
+            margin: 50px;
+        }
+
+        .select {
+            margin: 15px;
+        }
+    }
 }
