--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,8 +1,31 @@
+@import '../../containers/App/vars';
+
 .wrap {
     width: 24%;
     height: 300px;
     background-color: tomato;
     margin: 1rem;
+
+    .cardImg {
+        img {
+            width: 100%;
+            height: 200px;
+            display: block;
+            object-fit: cover;
+            object-position: center center;
+            box-shadow: $shadow-light;
+        }
+    }
+
+    .cardBody {
+        h3 {}
+
+        ul {
+            li {
+                span {}
+            }
+        }
+    }
 }
 
 @media (max-width:753px) {
