--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -2,9 +2,11 @@
 
 .wrap {
     width: 24%;
-    height: 300px;
-    background-color: tomato;
+    height: 400px;
     margin: 1rem;
+    cursor: pointer;
+    border-radius: $radii;
+    box-shadow: $shadow-light;
 
     .cardImg {
         img {
@@ -18,11 +20,24 @@
     }
 
     .cardBody {
-        h3 {}
+        padding: 1rem 1.5rem 2rem;
+
+        h3 {
+            margin: 0px;
+            font-size: 24px;
+            font-weight: $fw-bold;
+        }
 
         ul {
+            margin-top: 20px;
+
             li {
-                span {}
+                margin-top: 5px;
+
+                span {
+                    font-weight: $fw-bold;
+                    margin-right: 5px;
+                }
             }
         }
     }
