--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -7,6 +7,7 @@
     cursor: pointer;
     border-radius: $radii;
     box-shadow: $shadow-light;
+    overflow: hidden;
 
     .cardImg {
         img {
