--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -15,7 +15,7 @@
             height: 200px;
             display: block;
             object-fit: cover;
-            object-position: center center;
+            object-position: center;
             box-shadow: $shadow-light;
         }
     }
