--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -11,6 +11,11 @@
     padding: 1rem 2rem;
     background-color: inherit;
     box-shadow: $shadow-light;
+    margin-right: 10px;
+
+    &:hover {
+        border: 1px solid rgba(255, 255, 255, 0.324);
+    }
 
     input {
         margin-left: 10px;
