--- a/src/pages/Details/Info/Info.module.scss
+++ b/src/pages/Details/Info/Info.module.scss
@@ -1,7 +1,8 @@
-.wrapper {
+section {
     margin: 20px 0;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     .picture {
         img {
